--- a/views/vwSeller/add.handlebars
+++ b/views/vwSeller/add.handlebars
@@ -82,6 +82,15 @@
         }
         document.querySelector("#productDescription").value = DOMPurify.sanitize(quill.getSemanticHTML());
 
+        const product_name = document.querySelector("#productName").value;
+        if (!product_name) {
+            Swal.fire({
+                icon: "error",
+                text: "Vui lòng nhập tên sản phẩm"
+            });
+            return;
+        }
+
         const start_price = +(document.querySelector("#startPrice").value.replace(/\./g, '').replace(/,/g, '.'));
         if (start_price <= 0) {
             Swal.fire({
@@ -100,21 +109,48 @@
             return;
         }
 
-        const buy_now_price = +(document.querySelector("#buyNowPrice").value.replace(/\./g, '').replace(/,/g, '.'));
-        if (buy_now_price <= 0 || buy_now_price < start_price) {
+        if (document.querySelector("#buyNowPrice").value) {
+            const buy_now_price = +(document.querySelector("#buyNowPrice").value.replace(/\./g, '').replace(/,/g, '.'));
+            if (buy_now_price <= 0 || buy_now_price < start_price) {
+                Swal.fire({
+                    icon: "error",
+                    text: "Vui lòng nhập giá mua ngay lớn hơn 0 và không nhỏ hơn giá khởi tạo"
+                });
+                return;
+            }
+        }
+        
+        if (!document.querySelector('#endTime').value) {
             Swal.fire({
                 icon: "error",
-                text: "Vui lòng nhập bước giá lớn hơn 0 và không nhỏ hơn giá khởi tạo"
+                text: "Vui lòng nhập thời điểm kết thúc",
             });
             return;
         }
-        
+
         const end_time = new Date(document.querySelector('#endTime').value);
         const now = new Date();
+        const max = new Date("2050-01-01T00:00");
         if (end_time < now) {
             Swal.fire({
                 icon: "error",
                 text: "Vui lòng nhập thời điểm kết thúc hợp lệ",
+            });
+            return;
+        }
+        if (end_time > max) {
+            Swal.fire({
+                icon: "error",
+                text: "Vui lòng nhập thời điểm kết thúc hợp lệ",
+            });
+            return;
+        }
+
+        const selected_cat = document.querySelector("#categoryId").value;
+        if (!selected_cat) {
+            Swal.fire({
+                icon: "error",
+                text: "Vui lòng chọn danh mục sản phẩm",
             });
             return;
         }
@@ -139,18 +175,18 @@
                 <div class="mb-3">
                     <label for="productName" class="form-label fw-semibold">Tên sản phẩm <span
                             class="text-danger">*</span></label>
-                    <input type="text" id="productName" class="form-control" name="product_name" autofocus required>
+                    <input type="text" id="productName" class="form-control" name="product_name" autofocus>
                 </div>
                 <div class="row mb-3">
                     <div class="col">
                         <label for="startPrice" class="form-label fw-semibold">Giá khởi điểm <span
                                 class="text-danger">*</span></label>
-                        <input type="text" id="startPrice" class="form-control" name="start_price" required>
+                        <input type="text" id="startPrice" class="form-control" name="start_price">
                     </div>
                     <div class="col">
                         <label for="priceStep" class="form-label fw-semibold">Bước giá <span
                                 class="text-danger">*</span></label>
-                        <input type="text" id="priceStep" class="form-control" name="step_price" required>
+                        <input type="text" id="priceStep" class="form-control" name="step_price">
                     </div>
                     <div class="col">
                         <label for="buyNowPrice" class="form-label fw-semibold">Giá mua ngay</label>
@@ -160,7 +196,7 @@
                 <div class="mb-3">
                     <label for="endTime" class="form-label fw-semibold">Thời điểm kết thúc <span
                             class="text-danger">*</span></label>
-                    <input type="datetime-local" min="2025-01-01T00:00" max="2050-01-01T00:00" id="endTime" class="form-control" name="end_time" required>
+                    <input type="datetime-local" id="endTime" class="form-control" name="end_time">
                 </div>
                 <div class="row mb-3">
                     <div class="col-md">
@@ -184,7 +220,7 @@
                 <div class="mb-3">
                     <label for="categoryId" class="fw-semibold">Danh mục sản phẩm <span
                             class="text-danger">*</span></label>
-                    <select id="categoryId" class="form-select" required name="category_id">
+                    <select id="categoryId" class="form-select" name="category_id">
                         <option selected value="">-- Chọn danh mục --</option>
                         {{#each list}}
                         <option value={{category_id}}>{{category_name}}</option>
